fix: main page layout bug

--- a/FE/styles/mainsection.module.css
+++ b/FE/styles/mainsection.module.css
@@ -14,11 +14,11 @@
   display: inline-block;
   width: 17rem;
   max-width: 100%;
-  height: 100%;
   margin-right: 1rem;
   margin-left: 1rem;
   vertical-align: top;
   transition: 0.5s;
+  border: none;
 }
 
 .cards .card:hover {
